@@ -38,12 +38,6 @@ public final class ProjectAnalyser implements GraphRepository {
   private DefaultDirectedGraph<String, DefaultEdge> callGraph;
   private List<List<String>> analysisOrder;
 
-  public JavaView getView() {
-    return view;
-  }
-
-  //  private final SummaryCache summaryCache = new SummaryCache();
-
   public ProjectAnalyser(final Path jarPath) {
     this.jarPath = jarPath;
   }
@@ -54,7 +48,6 @@ public final class ProjectAnalyser implements GraphRepository {
     view = new JavaView(inputLocation);
 
     List<JavaSootClass> classes = view.getClasses().toList();
-    log.info("Found {} classes", classes.size());
 
     Map<String, WITUpGraph> methodGraph = analyseClasses(classes);
     methodGraphs.putAll(methodGraph);
@@ -96,7 +89,7 @@ public final class ProjectAnalyser implements GraphRepository {
         continue;
       }
       if (relevant.size() == 1) {
-        summariseMethod(relevant.get(0), methodGraphs, summaryCache, localSummaries, failures);
+        summariseMethod(relevant.getFirst(), methodGraphs, summaryCache, localSummaries, failures);
       } else {
         summariseSCC(relevant, methodGraphs, summaryCache, localSummaries, failures);
       }
@@ -138,7 +131,6 @@ public final class ProjectAnalyser implements GraphRepository {
                   worklist.add(callee);
                 }
               });
-      log.debug("reachable for {}: {}", sig, reachable);
     }
     return reachable;
   }
@@ -146,14 +138,8 @@ public final class ProjectAnalyser implements GraphRepository {
   public static Map<String, WITUpGraph> buildGraphsForClass(final JavaSootClass sootClass) {
     return sootClass.getMethods().stream()
         .filter(JavaSootMethod::hasBody)
-        //        .filter(ProjectAnalyser::methodHasThrow)
         .collect(Collectors.toMap(m -> m.getSignature().toString(), CPGBuilder::buildForMethod));
   }
-
-  //  private static boolean methodHasThrow(final JavaSootMethod method) {
-  //    return method.getBody().getStmtGraph().getNodes().stream()
-  //        .anyMatch(s -> s instanceof JThrowStmt);
-  //  }
 
   @Override
   public Optional<WITUpGraph> getGraph(final String methodSignature) {
@@ -167,22 +153,17 @@ public final class ProjectAnalyser implements GraphRepository {
     Map<String, MethodSummary> methodSummaries = new LinkedHashMap<>();
 
     CallGraphBuilder builder = new CallGraphBuilder(view);
-
     callGraph = builder.build(graphs.keySet());
-
     analysisOrder = builder.buildAnalysisOrder(callGraph);
-
-    log.info("analysis order :{}", analysisOrder);
     for (List<String> scc : analysisOrder) {
       if (scc.size() == 1) {
         // singleton — one pass
-        String sig = scc.get(0);
+        String sig = scc.getFirst();
         summariseMethod(sig, graphs, summaryCache, methodSummaries, failures);
       } else {
         summariseSCC(scc, graphs, summaryCache, methodSummaries, failures);
       }
     }
-
     return methodSummaries;
   }
 
@@ -220,7 +201,6 @@ public final class ProjectAnalyser implements GraphRepository {
       }
       summaryCache.putSummary(sig, MethodSummary.empty(sig));
     }
-
     // iterate until fixpoint
     boolean changed = true;
     int iterations = 0;
